recursion.cons.reverse.Reverse.scala.code
def reverse(l:List[Int]): List[Int] = {
  if(l.tail==Nil){
    return List(l.head);
  }
  
  return reverse(l.tail)::List(l.head);
}